--- a/FacebookNewsfeedSample/res/values/strings.xml
+++ b/FacebookNewsfeedSample/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">FacebookNewsfeedSample</string>
-	<string name="facebook_app_id">your-facebook-app-id-goes-here-in-res-strings-xml</string>
+	<!-- <string name="facebook_app_id">your-facebook-app-id-goes-here-in-res-strings-xml</string> -->
+    <string name="facebook_app_id">271756786173912</string>
 
 	<string name="com_dhsoftware_android_logout">Logout</string>
 </resources>
